syntax = "proto3";

option go_package = "github.com/evanrolfe/dockerdog/api";

package api;

import "google/protobuf/any.proto";

service DockerDogAgent {
    rpc SendFlowObserved (FlowObserved) returns (Reply) {}
    rpc SendAgentStarted (AgentStarted) returns (Reply) {}
    rpc OpenCommandStream (stream NooP) returns (stream Command) {}
}

message FlowObserved {
    string local_addr = 1;
    string remote_addr = 2;
    string l4_protocol = 3;
    string l7_protocol = 4;
	bytes request = 5;
	bytes response = 6;
}

message Reply {
    string status = 1;
}

message AgentStarted {}
message NooP {}

message Command {
    string type = 1;
    Settings settings = 2;
}

message Settings {
    repeated string container_ids = 1;
}

message Request {
    int32 num = 1;
}

message Response {
    int32 result = 1;
}
